2005-09-11  Carlos Garcia Campos  <carlosgc@gnome.org>

	* Makefile.am: s/extra_DIST/EXTRA_DIST/. Remove pixmaps and interfaces
	directories

	* configure.in: s/interfacesdir/uidir/

	* data/Makefile.am:
	* src/Makefile.am:
	* interfaces/Makefile.am: Removed
	* pixmaps/Makefile.am: Removed
	* data/buoh.desktop.in: Added
	* src/buoh.desktop.in: Removed
	* data/buoh.glade: Added
	* interfaces/buoh.glade: Removed
	* data/buoh*.png: Added
	* pixmaps/buoh*.png: Removed
	Move glade file, buoh.desktop.in and icons to data directory

	* po/ChangeLog: Added

	* po/POTFILES.in: s/interfaces/data/

	* src/buoh-add-comic-dialog.c:
	* src/buoh-window.c:
	s/INTERFACES_DIR/UI_DIR/

2005-09-10  Carlos Garcia Campos  <carlosgc@gnome.org>

	* TODO: Updated

	* configure.in: Add --enable-debug

	* src/buoh-add-comic-dialog.c:
	* src/buoh-comic-list.c:
	* src/buoh-comic-loader.c:
	* src/buoh-view-comic.c:
	* src/buoh-window.c:
	* src/comic-simple.c:
	s/g_debug/buoh_debug

	* src/buoh.[ch]: Add buoh_debug. It'll only show debug messages if
	debug was enabled in configure

2005-09-10  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-comic.[ch]: Add a function to make comic thumbnails.

	* src/buoh-view-comic.c: Allow drag and drop a comic from the buoh to
	anywhere else

2005-09-09  Esteban Sanchez  <esteban@steve-o.org>
	
	* src/buoh-comic-maanger.[ch]: Added comic_list and current to the
	private structure.  Get_next, get_last, get_previous,
	get_current implemented.

2005-09-09  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-comic-loader.[ch]: 
	* src/buoh-view-comic.c:
	Show gnome-vfs errors in the message error view instead of the console

2005-09-08  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-window.c: Save a copy menu item disabled by default

2005-09-08  Carlos Garcia Campos  <carlosgc@gnome.org>

	* TODO: Updated

	* src/Makefile.am: Updated for new files
	* buoh-view-comic.[ch]: Added
